RESOLVED FIXED 256089
[GStreamer][WebRTC] Fix PCMU payload type handling
https://bugs.webkit.org/show_bug.cgi?id=256089
Summary [GStreamer][WebRTC] Fix PCMU payload type handling
Philippe Normand
Reported 2023-04-28 06:35:49 PDT
.
Attachments
Philippe Normand
Comment 1 2023-04-28 06:37:55 PDT
EWS
Comment 2 2023-05-02 00:55:27 PDT
Committed 263576@main (8821af85746b): <https://commits.webkit.org/263576@main> Reviewed commits have been landed. Closing PR #13271 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-02 00:56:20 PDT
Note You need to log in before you can comment on or make changes to this bug.