[GStreamer][WebRTC] Fix PCMU payload type handling https://bugs.webkit.org/show_bug.cgi?id=256089

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::capsFromSDPMedia): The payload type for PCMU is 0, and is valid, so don't bail out when
it's found in a SDP media.

Canonical link: https://commits.webkit.org/263576@main